// Copyright AGNTCY Contributors (https://github.com/agntcy)
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package controller.proto.v1;

option go_package = "github.com/agntcy/slim/otel/channelmanager";

service ChannelManagerService {
  rpc Command(ControlMessage) returns (ControlMessage) {}
}

message ControlMessage {
    uint64 mgs_id = 1;
    oneof payload {
        CreateChannelRequest create_channel_request = 2;
        DeleteChannelRequest delete_channel_request = 3;
        AddParticipantRequest add_participant_request = 4;
        DeleteParticipantRequest delete_participant_request = 5;
        ListChannelsRequest list_channel_request = 6;
        ListChannelsResponse list_channel_response = 7;
        ListParticipantsRequest list_participants_request = 8;
        ListParticipantsResponse list_participants_response = 9;
        CommandResponse command_response = 10;
    }
}

message CreateChannelRequest {
    string channel_name = 1;
    bool mls_enabled = 2;
}

message DeleteChannelRequest {
    string channel_name = 1;
}

message AddParticipantRequest {
    string channel_name = 1;
    string participant_name = 2;
}

message DeleteParticipantRequest {
    string channel_name = 1;
    string participant_name = 2;
}

message ListChannelsRequest {}


message ListChannelsResponse {
    uint64 msg_id = 1;
    // IDs of the channels available in the control plane
    repeated string channel_name = 2;
}

message ListParticipantsRequest {
    string channel_name = 1;
}

message ListParticipantsResponse {
    uint64 msg_id = 1;
    repeated string participant_name = 2;
}

message CommandResponse {
    uint64 msg_id = 1;
    bool success = 2;
    optional string errorMsg = 3;
}
